--- a/Fronted/css/header-footer.css
+++ b/Fronted/css/header-footer.css
@@ -37,6 +37,7 @@ header {
 .logo-container {
     display: flex;
     justify-content: center;
+    background-color: transparent;
 }
 
 .header-logo {
