--- a/Fronted/css/documents.css
+++ b/Fronted/css/documents.css
@@ -1,108 +1,80 @@
-
 @font-face {
     font-family: 'MiFuentePersonalizada';
     src: url('../fonts/Teko-VariableFont_wght.ttf') format('truetype');
 }
 
-*{
+/* Reset margins and padding */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+}
+
+.main {
     font-family: 'MiFuentePersonalizada';
     background-color: black;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 1%;
-    margin-right: 1%;
-}
-
-
-.footer-socialmedia {
-    display: flex;
-    justify-content: center;
-    margin-top: 2%;
-    margin-bottom: 8%;
-}
-
-.button {
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    border: none;
-    position: relative;
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10px;
-    transition: 0.1s;
-}
-
-.button svg {
     color: white;
-    width: 30px;
-    height: 30px;
-    z-index: 9;
+    padding: 0 5%;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.button:nth-child(1) {
-    background: linear-gradient(120deg, #ff6600, #fbff00);
-}
-
-.button:nth-child(2) {
-    background: linear-gradient(120deg, #ff6600, #fbff00);
-}
-
-.button:nth-child(3) {
-    background: linear-gradient(120deg, #ff6600, #fbff00);
-}
-
-.button:nth-child(4) {
-    background: linear-gradient(120deg, #ff6600, #fbff00);
-}
-
-.button:active {
-    transform: scale(0.85);
-}
-
-.button::before {
-    content: "";
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    background-color: #212121;
-    border-radius: 50px;
-    z-index: -1;
-    border: 0px solid rgba(255, 255, 255, 0.411);
-    transition: 0.4s;
-}
-
-.button:hover::before {
-    width: 0px;
-    height: 0px;
-}
-
-.main{
-    color: white;
-
-}
-
-.main h1{
+.main h1 {
     font-size: 375%;
     padding-top: 5%;
-    
+    margin-bottom: 20px;
 }
 
-.main h2{
+.main h2 {
     font-size: 200%;
- 
     background-image: linear-gradient(to top, #ff6600, #fbff00);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-    
+    margin-top: 30px;
+    margin-bottom: 15px;
 }
 
-.main p{
+.main p {
     font-size: 125%;
     letter-spacing: 1px;
-    padding-bottom: 5%;
+    padding-bottom: 3%;
+    line-height: 1.5;
+}
+
+.main ul {
+    padding-left: 25px;
+    margin-bottom: 20px;
+    color: white;
+    font-size: 125%;
+    letter-spacing: 1px;
+}
+
+.main ul li {
+    margin-bottom: 10px;
+}
+
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .main {
+        padding: 0 3%;
+    }
+    
+    .main h1 {
+        font-size: 300%;
+    }
+    
+    .main h2 {
+        font-size: 160%;
+    }
 }
