--- a/Fronted/css/header-footer.css
+++ b/Fronted/css/header-footer.css
@@ -69,7 +69,7 @@ header {
     height: 100%;
     background-color: black;
     transition: left 0.3s ease;
-    z-index: 1001; /* Mayor que el overlay */
+    z-index: 1001; 
 }
 
 .sidebar.active {
@@ -146,7 +146,7 @@ header {
     position: relative;
 }
 
-/* Mostramos todos los iconos tanto en móvil como en desktop */
+/* Mostramos todos los iconos tanto en móvil como en escritorio */
 .action-icon {
     display: block;
 }
@@ -301,7 +301,7 @@ footer {
         height: 50px;
     }
 
-    /* Ajustamos el tamaño y espaciado de los iconos en desktop */
+    /* Ajustamos el tamaño y espaciado de los iconos en escritorio */
     .action-icon {
         font-size: 25px;
         margin-left: 20px;
